--- a/procfile
+++ b/procfile
@@ -1,1 +1,1 @@
-web: php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT
+web: composer install --no-dev --optimize-autoloader --ignore-platform-req=ext-gd && php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=$PORT
