--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==3.0.0
 flask-cors==4.0.0
-opencv-python==4.8.1.78
+opencv-python-headless==4.8.1.78
 mediapipe==0.10.9
 numpy==1.24.3
 pandas==2.0.3
