--- a/AI_Model/requirements.txt
+++ b/AI_Model/requirements.txt
@@ -1,10 +1,10 @@
-flask==3.0.0
-flask-cors==4.0.0
-opencv-python-headless==4.8.1.78
-mediapipe==0.10.20
-numpy==1.24.3
-pandas==2.0.3
-scikit-learn==1.3.2
-joblib==1.3.2
-requests==2.31.0
-tensorflow==2.15.0
+flask
+flask-cors
+numpy
+pandas
+scikit-learn
+joblib
+requests
+tensorflow
+opencv-python-headless
+mediapipe
