--- a/AI_Model/requirements.txt
+++ b/AI_Model/requirements.txt
@@ -1,11 +1,10 @@
 flask==3.0.0
 flask-cors==4.0.0
 opencv-python-headless==4.8.1.78
-mediapipe==0.10.20
-numpy==1.24.3
-pandas==2.0.3
-openpyxl
-scikit-learn==1.3.2
-joblib==1.3.2
-requests==2.31.0
+mediapipe>=0.10.30
 tensorflow==2.15.0
+numpy>=1.24.0,<2.0.0
+pandas>=2.0.0
+openpyxl>=3.1.0
+scikit-learn>=1.3.0
+Pillow>=10.0.0
