--- a/AI_Model/requirements.txt
+++ b/AI_Model/requirements.txt
@@ -1,10 +1,11 @@
-flask==3.0.0
-flask-cors==4.0.0
-opencv-python-headless==4.8.1.78
-mediapipe>=0.10.30
-tensorflow==2.15.0
-numpy>=1.24.0,<2.0.0
-pandas>=2.0.0
-openpyxl>=3.1.0
-scikit-learn>=1.3.0
-Pillow>=10.0.0
+Flask==3.1.2
+flask-cors==6.0.2
+opencv-python-headless==4.11.0.86
+mediapipe==0.10.20
+tensorflow==2.19.1
+numpy==1.26.4
+pandas==2.3.3
+openpyxl==3.1.5
+scikit-learn==1.8.0
+pillow==12.0.0
+matplotlib==3.10.8
