--- a/AI_Model/requirements.txt
+++ b/AI_Model/requirements.txt
@@ -1,11 +1,10 @@
 Flask==3.1.2
 flask-cors==6.0.2
 opencv-python-headless==4.11.0.86
-mediapipe==0.10.20
-tensorflow==2.19.1
-numpy==1.26.4
-pandas==2.3.3
-openpyxl==3.1.5
-scikit-learn==1.8.0
-pillow==12.0.0
-matplotlib==3.10.8
+mediapipe==0.10.31
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.2
+joblib==1.3.2
+requests==2.31.0
+tensorflow==2.15.0
