--- a/AI_Model/requirements.txt
+++ b/AI_Model/requirements.txt
@@ -1,7 +1,7 @@
 Flask==3.1.2
 flask-cors==6.0.2
-opencv-python-headless==4.11.0.86
-mediapipe==0.10.31
+opencv-python-headless==4.8.1.78
+mediapipe==0.10.9
 numpy==1.24.3
 pandas==2.0.3
 scikit-learn==1.3.2
@@ -9,3 +9,4 @@ joblib==1.3.2
 requests==2.31.0
 tensorflow==2.15.0
 openpyxl==3.1.2
+protobuf==3.20.3
